# ctd_helper

./: .gitignore  .gitmodules  CMakeLists.txt  compile_commands.json  ctd_helper.code-workspace  readme.md
.github/workflows/: build.yaml
cmake/: FindSpdlog.cmake
src/red4ext/: Addresses.hpp  CMakeLists.txt  Dialog.rc.unused  Instr.hpp  Main.cpp  Registrar.hpp  ScriptHost.hpp  Template.hpp  Utils.cpp  Version.hpp  Version.hpp.in  ctd_helper.sln  ctd_helper.vcxproj  highlight.min.js  highlight.min.js.frag  line-numbers.min.js  line-numbers.min.js.frag  style.css  style.css.frag  versioninfo.rc
tools/: build.bat
